# sqlgrep

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: full_pipeline.rs
samples/: example.py
spec/: samples.txt  table.txt
src/: aggregate_execution.rs  data_model.rs  executer.rs  execution_engine.rs  execution_model.rs  executor.rs  expression_execution.rs  helpers.rs  ingest.rs  integration_tests.rs  lib.rs  main.rs  model.rs  parse_tree_converter.rs  parser.rs  process_engine.rs  python_wrapper.rs  select_execution.rs  table_editor.rs
src/execution/: aggregate_execution.rs  aggregate_execution_tests.rs  column_providers.rs  execution_engine.rs  expression_execution.rs  helpers.rs  join.rs  mod.rs  select_execution.rs
src/parsing/: mod.rs  operator.rs  parse_tree_converter.rs  parser.rs  parser_tests.rs  parser_tree_converter.rs  parser_tree_converter_tests.rs  tokenizer.rs
testdata/: .gitignore  clients.txt  clients_data.json  definition1.txt  dummy.txt  dummy1_data.txt  dummy2_data.txt  ftpd.txt  ftpd_array.txt  ftpd_csv.txt  ftpd_data.txt  ftpd_data_csv.txt  ftpd_default.txt  ftpd_timestamp.txt  queries.txt  ssh_failure.txt
tools/: delay_cat.py
