[package]
name = "sqlgrep"
version = "0.7.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2018"
description = "sqlgrep = SQL + grep + tail -f"
license = "MIT"
homepage = "https://github.com/svenslaggare/sqlgrep"

[features]
default = []
python_wrapper = ["pyo3"]

[lib]
name = "sqlgrep"
crate-type = ["rlib", "cdylib"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3"
ctrlc = "3.0"
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
fnv = "1.0"
itertools = "0.10.0"
serde_json = { version = "1", features = ["preserve_order"] }
chrono = "0.4.19"
pyo3 = { version = "0.18", features = ["extension-module"], optional = true }

[target.'cfg(unix)'.dependencies]
cursive = { version = "0.20" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "full_pipeline"
harness = false