[package]
name = "sqlgrep"
version = "0.7.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2018"
description = "sqlgrep = SQL + grep + tail -f"
license = "MIT"
homepage = "https://github.com/svenslaggare/sqlgrep"

[features]
default = []
python_wrapper = ["pyo3"]

[lib]
name = "sqlgrep"
crate-type = ["rlib", "cdylib"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3"
ctrlc = "3.0"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
fnv = "1.0"
itertools = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
chrono = "0.4.19"
pyo3 = { version = "0.19.1", features = ["extension-module"], optional = true }

[target.'cfg(unix)'.dependencies]
cursive = { version = "0.20" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "full_pipeline"
harness = false